# octet

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  base.py
src/octet/: __init__.py  constants.py
tests/: test_magnitudes.py
