[tool.poetry]
name = "octet"
version = "0.1.1"
description = "Object-oriented way to represent digital sizes (bits and bytes)"
authors = ["Enrique Soria <me@enriquesoria.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/EnriqueSoria/octet"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
